feat: SaboteurBot picks watershed when possible. Fixes #160